# uniswapx-explorer

./: .gitignore  Cargo.toml  README.md
crates/indexer/: Cargo.toml
crates/indexer/src/: indexer.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  order.rs  order_asset.rs  order_details.rs
indexer-cli/: Cargo.toml
indexer-cli/src/: cli.rs  main.rs
web/: package.json  pnpm-lock.yaml  tailwind.config.js
web/app/: layout.tsx  providers.tsx
web/app/orders/[hash]/: loading.tsx  order.tsx  page.tsx
web/components/: field.tsx  header.tsx
web/types/: order-asset.d.ts  order-details.d.ts  order.d.ts
