[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
defillama = { git = "https://github.com/leruaa/defillama-rs" }
erc20 = { workspace = true }
alloy-primitives = { workspace = true }
alloy = { workspace = true, features = [
    "network",
    "transports",
    "providers",
    "rpc",
    "rpc-client",
] }
uniswapx = { workspace = true }
stapifaction = { path = "../../../../stapifaction/stapifaction", features = [
    "json",
] }
tsify = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
tracing = "0.1"
anyhow = "1.0"
