[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniswapx = { workspace = true }
stapifaction = { path = "../../../../stapifaction/stapifaction", features = [
    "derive",
] }
erc20 = { git = "https://github.com/leruaa/erc20-rs" }
alloy-primitives = "0.5"
serde = { version = "1.0", features = ["derive"] }
tsify = { workspace = true }
num-traits = "0.2"
